# finance-tracker

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  PROGRESS.md  README.md  TECH_STACK.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 05f31889722c_asset_identity_chain_contract.py  1ed07e31cab5_baseline_2026_05_07.py  3317bd446ae0_add_crypto_wallet_and_exchange.py  7bc98bcff7fe_add_include_in_total.py  a1b2c3d4e5f6_add_broker_connections.py  b2c3d4e5f6a7_broker_conn_traderepublic.py  b5f0a2f546ed_market_price_index_and_exchange_conn_.py  c3d4e5f6a7b8_add_asset_holding_source.py  d4e5f6a7b8c9_add_account_sort_order.py  e53bc1301436_add_llm_classification.py  e5f6a7b8c9d0_add_portfolio_snapshots.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  accounts.py  assets.py  bank_sync.py  cashflow.py  categories.py  holdings.py  llm.py  market.py  notes.py  notion.py  rules.py  statements.py  system.py  transactions.py  wallet_sync.py
backend/app/core/: __init__.py  auth.py  config.py  errors.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  bank_connection.py
backend/app/schemas/: __init__.py  bank_sync.py
backend/app/services/: app_settings.py  security_health.py
backend/app/services/asset_search/: __init__.py  engine.py
backend/app/services/bank_sync/: __init__.py  crypto.py  engine.py
backend/app/services/broker_sync/: __init__.py  ibkr.py  traderepublic.py  upsert.py
backend/app/services/cashflow/: __init__.py  engine.py
backend/app/services/categorizer/: engine.py  seed.py
backend/app/services/crypto_sync/: __init__.py  btc_blockstream.py  evm_alchemy.py  sol_rpc.py  tron_grid.py
backend/app/services/csv_import/: __init__.py
backend/app/services/csv_parser/: __init__.py  paypal.py
backend/app/services/exchange_sync/: __init__.py  binance.py  bitget.py  sign.py
backend/app/services/ingestion/: __init__.py  fx.py
backend/app/services/llm/: __init__.py  classifier.py  cost_tracker.py  gemini.py  prompt.py  provider.py  queue.py
backend/app/services/market_data/: coingecko.py  engine.py  scheduler.py
backend/app/services/notion_sync/: __init__.py  engine.py
backend/app/services/pdf_parser/: engine.py
backend/app/services/refresh_matching/: __init__.py
backend/app/services/transfer_matcher/: __init__.py  engine.py
backend/app/services/valuation/: anchor.py  cash_history.py  composition.py  engine.py  fx.py  net_worth.py  snapshot.py
backend/scripts/: migrate_crypto_asset_identity.py
backend/tests/: test_account_reorder.py  test_amount_invariant_patch.py  test_api.py  test_app_settings_gemini.py  test_asset_identity.py  test_asset_lookup_by_chain_contract.py  test_audit_invariants.py  test_base_amount_lifecycle.py  test_broker_sync.py  test_cashflow_by_category_fx.py  test_cashflow_recompute_range.py  test_coingecko_prices.py  test_composition.py  test_credentials_health.py  test_crypto_sync.py  test_crypto_wallet_schema.py  test_csv_import.py  test_exchange_sync.py  test_holding_out.py  test_holdings_value.py  test_index_invariants.py  test_ingestion.py  test_kind_invariant.py  test_llm_classification.py  test_llm_dispatch_race.py  test_llm_queue.py  test_mark_transfer.py  test_multi_currency_ingestion.py  test_notion_auth.py  test_paypal_csv.py  test_pdf_parser.py  test_portfolio_filters.py  test_portfolio_snapshot.py  test_refresh_matching.py  test_regex_safety.py  test_review_v7.py  test_review_v8.py  test_rule_safety.py  test_security_invariants.py  test_spam_filter.py  (+8 more)
deploy/: start.sh  (+2 more)
mcp-server/: pyproject.toml  run.sh
mcp-server/src/finance_mcp/: __init__.py  _backend.py  read_tools.py  server.py
mcp-server/tests/: test_mcp_read.py
(+88 files in other folders)
