[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-tracker-backend"
version = "0.1.0"
description = "Finance Tracker — personal finance & bookkeeping backend (FastAPI + SQLite)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Finance Tracker Maintainers" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "structlog>=24.1",
    "apscheduler>=3.10",
    "pdfplumber>=0.11",
    "pypdf>=4.2",
    "yfinance>=0.2.40",
    "pycoingecko>=3.1",
    "cryptography>=43.0",
    "google-genai>=0.3",
    # Trade Republic unofficial API (read-only portfolio). Used by
    # services/broker_sync/traderepublic.py. TR's login is protected by AWS
    # WAF; as of 2026-06 only the playwright (headless Chromium) solver is
    # accepted — the pure-Python awswaf token is rejected (HTTP 405). So a
    # browser binary IS required for the LOGIN step:
    #   python -m playwright install chromium          (Ubuntu: add --with-deps)
    # Routine balance syncs resume from stored cookies and need no browser.
    "pytr>=0.4.9",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
finance-tracker = "app.main:run_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
